# localmind

./: .gitignore  CLAUDE.md  README.md  create_desktop_shortcut.sh  create_macos_app.sh  create_taskbar_shortcut.ps1  dedup_embeddings.py  delete_all_embeddings.py  delete_doc.py  localmind_rag_demo_memory.py  main_plan.md  package-lock.json  prepare_ollama_env.sh  pyproject.toml  rebuild_rust.bat  rebuild_rust.sh  refactor_plan.md  start_all.sh  start_dev.sh  start_eval.sh  start_localmind.bat  start_localmind.sh  wipe_all_data.sh
.claude/: settings.local.json
.cursor/commands/: merge.md
.cursor/rules/: specify-rules.mdc
.roo/rules/: 01-PRD.md  02-Project rules.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
chrome-extension/: background.js  bookmark-manager.js  config-manager.js  content-clipboard.js  content-google-docs.js  content.js  manifest.json  package.json  popup.css  popup.html  popup.js  webpack.config.js
chrome-extension/config/: special-domains-default.json
chrome-extension/ui/: dialogs.css  dialogs.js
desktop-daemon/: CLAUDE.md  jest.config.js  package-lock.json  package.json  temp  test-documents.json  tsconfig.json
desktop-daemon/frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
desktop-daemon/frontend/.svelte-kit/: ambient.d.ts
desktop-daemon/frontend/src/: app.html  styles.css
desktop-daemon/src/: config.js  config.ts  index.js  index.test.js  index.test.ts  index.ts
desktop-daemon/src/public/: index.html  main.ts  renderer.js  styles.css  tsconfig.json
desktop-daemon/src/services/: bookmarkMonitor.test.ts  bookmarkMonitor.ts  chromaStore.ts  database.ts  debug_embeddings.py  documentStore.test.js  documentStore.test.ts  documentStore.ts  ollama.js  ollama.test.js  ollama.test.ts  ollama.ts  rag.js  rag.test.js  rag.test.ts  rag.ts  vectorStore.js  vectorStore.test.js  vectorStore.test.ts  vectorStore.ts
desktop-daemon/src/utils/: contentExtractor.test.ts  contentExtractor.ts  excludeFilter.test.ts  excludeFilter.ts  textProcessor.ts
docs/: exclude_bms_plan.md  google_docs_extraction.md  localMind_prd.md  main_plan.md  main_plan_go.md  main_plan_rust.md  migration_plan_svelte.md  notes_feature.md  tdd_go.md
embedding-server/: embedding_server.py  pyproject.toml  test_gpu_embeddings.py
embedding-server/localmind_embedding_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eval-tool/: .gitignore  README.md  bookmark_sampler.py  chroma_evaluator.py  chunk_plan.md  chunk_quality_filter.py  chunk_query_generator.bak  chunk_query_generator.py  chunk_query_generator_original.py  chunk_sampler.py  chunk_vector_evaluator.py  cluster_sampler.py  debug_query_gen.py  debug_response.py  exclude_filter.py  gpu_test.py  hello.py  integrated_sampler.py  lmstudio_client.py  lmstudio_embedding.py  main.py  main_backup.py  main_old.py  make_qrels.py  nomic-gpu.modelfile  ollama_embedding.py  pyproject.toml  query_generator.py  requirements.txt  retrieval_evaluator.py  run-minilm.sh  run-nomic.sh  run-qwen.sh  run.bat  run.sh  run_retrieval_eval.py  save_embeddings.py  setup_gpu_models.sh  simple_test.py  test_config_migration.py  (+10 more)
localmind-rs/: CLAUDE.md  Cargo.toml  MODEL_SETUP.md  README.md  build.rs  dev.bat  dev.ps1  package-lock.json  package.json  start.sh  start_localmind.bat  start_localmind.sh  start_localmind.sh.original  tauri.conf.json  test-threshold.js  vite.config.js
localmind-rs/src/: bookmark.rs  bookmark_exclusion.rs  db.rs  db_addition.rs  document.rs  fetcher.rs  folder_watcher.rs  http_server.rs  lib.rs  lmstudio.rs  local_embedding.rs  main.rs  main.rs.backup  ollama.rs  query_logger.rs  rag.rs  rechunk.rs  vector.rs  youtube.rs
localmind-rs/src-ui/: App.svelte  app.js  index.html  main.js  settings.js  style.css  svelte.config.js  tauri.svelte.js
localmind-rs/src-ui/components/: AIPanel.svelte  DocumentView.svelte  FolderTreeNode.svelte  SearchBar.svelte  SearchResults.svelte  SettingsModal.svelte  Toast.svelte
localmind-rs/src/gui/: app.rs  mod.rs  state.rs
localmind-rs/src/gui/views/: document.rs  home.rs  mod.rs  search.rs
localmind-rs/src/gui/widgets/: folder_tree.rs  mod.rs  settings.rs  toast.rs  watched_folders.rs
specs/001-bookmark-inbox-dedup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bookmark-inbox-dedup/checklists/: requirements.md
specs/001-bookmark-inbox-dedup/contracts/: chrome-apis.md
specs/001-canvas-domain-extraction/: plan.md  spec.md  tasks.md
specs/001-canvas-domain-extraction/checklists/: requirements.md
specs/001-http-api-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-http-api-server/checklists/: requirements.md
specs/001-http-api-server/contracts/: openapi.yaml
specs/002-graceful-model-startup/: spec.md
specs/002-graceful-model-startup/checklists/: requirements.md
specs/005-headless-llms/: ANALYSIS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-headless-llms/checklists/: requirements.md
specs/005-headless-llms/contracts/: embedding-api.yaml  removed-endpoints.md
specs/006-python-embedding-server/: spec.md
specs/007-egui-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-egui-frontend/checklists/: requirements.md
specs/007-egui-frontend/contracts/: README.md
specs/008-folder-watch-ingest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-folder-watch-ingest/checklists/: requirements.md
specs/008-folder-watch-ingest/contracts/: channel-messages.md
(+29 files in other folders)
