[project]
name = "localmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "numpy>=2.3.1",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
]

[tool.uv.workspace]
members = ["eval-tool"]
