[package]
name = "localmind-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Configuration
toml = "0.8"
dirs = "5.0"

notify = "6.0"
# GUI Framework (Tauri)
tauri = { version = "1.5", features = ["shell-open"] }
pdf-extract = "0.9.0"
readability = "0.3.0"
url = "2.5"

# Build dependencies for Tauri
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

