[package]
name = "localmind-rs"
version = "0.1.0"
edition = "2021"
default-run = "localmind-rs"

[features]
# This feature is used for production builds where `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.0", features = ["v4"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# YouTube transcript extraction
yt-transcript-rs = "0.1.8"

# Text processing
regex = "1.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Configuration
toml = "0.8"
dirs = "5.0"

notify = "6.0"
# GUI Framework (Tauri) - using selective features to match allowlist and avoid DLL issues
tauri = { version = "1.5", features = ["shell-open", "window-all", "fs-all", "path-all", "protocol-all", "http-all"] }
pdf-extract = "0.9.0"
readability = "0.3.0"
url = "2.5"

# Additional binaries
[[bin]]
name = "rechunk"
path = "src/rechunk.rs"

# Build dependencies for Tauri
[build-dependencies]
tauri-build = { version = "1.5", features = [] }
