[package]
name = "localmind-rs"
version = "0.1.0"
edition = "2021"
default-run = "localmind-rs"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"
log = "0.4"

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# YouTube transcript extraction
yt-transcript-rs = "0.1.8"

# Text processing
regex = "1.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Configuration
toml = "0.8"
dirs = "5.0"

notify = "6.0"

# GUI Framework (egui/eframe)
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }

# Utilities
open = "5"
html2text = "0.12"
image = { version = "0.25", default-features = false, features = ["png"] }
pdf-extract = "0.9.0"
readability = "0.3.0"
url = "2.5"

# Additional binaries
[[bin]]
name = "rechunk"
path = "src/rechunk.rs"

[dev-dependencies]
tempfile = "3.8"

